<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="305dp"
        android:layout_height="59dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="31dp"
        android:fontFamily="serif"
        android:text="Liquidacion"
        android:textColor="#FF5722"
        android:textDirection="locale"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="333dp"
        android:layout_height="90dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="38dp"
        android:fontFamily="serif"
        android:text="Por favor ingrese los siguientes datos para poder calcular su sueldo:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnL"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="13dp"
        android:backgroundTint="#DD3F3F"
        android:fontFamily="serif"
        android:onClick="enviar"
        android:text="@string/btn_liquidar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnR"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnR"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="13dp"
        android:backgroundTint="#2196F3"
        android:fontFamily="serif"
        android:onClick="regresar"
        android:text="@string/btn_regresar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="serif"
        android:text="@string/check_descuento"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnR"
        app:layout_constraintEnd_toStartOf="@+id/cbP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="serif"
        android:text="@string/check_pension"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="500dp"
        android:fontFamily="serif"
        android:text="@string/check_salud"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"
        android:text="Servicios:"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cbD"
        app:layout_constraintEnd_toStartOf="@+id/cbS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="95dp"
        android:layout_height="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="serif"
        android:text="Nombres:"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="89dp"
        android:layout_height="33dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="serif"
        android:text="Sueldo:"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="89dp"
        android:layout_height="33dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="serif"
        android:text="Cargo:"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="95dp"
        android:layout_height="37dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="13dp"
        android:fontFamily="serif"
        android:text="Apellidos:"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etD"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/txt_dias"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/cbS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etS"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="text"
        android:text="@string/txt_sueldo"
        app:layout_constraintBottom_toTopOf="@+id/etD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etC"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="text"
        android:text="@string/txt_cargo"
        app:layout_constraintBottom_toTopOf="@+id/etS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etA"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="text"
        android:text="@string/txt_apellidos"
        app:layout_constraintBottom_toTopOf="@+id/etC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etN"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="text"
        android:text="@string/txt_nombres"
        app:layout_constraintBottom_toTopOf="@+id/etA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"
        android:text="Dias laborados:"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/etD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>