<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="140dp"
        android:layout_height="32dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="51dp"
        android:fontFamily="serif"
        android:text="Felicidades!!"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="174dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="serif"
        android:text="Datos personales"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView17"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDV"
        android:layout_width="49dp"
        android:layout_height="23dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="37dp"
        android:fontFamily="serif"
        android:text="@string/txt_diasView"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSV"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="420dp"
        android:fontFamily="serif"
        android:text="Dias laborados:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="13dp"
        android:fontFamily="serif"
        android:text="Cargo:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvCV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSV"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif"
        android:text="@string/txt_sueldoView"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvVD"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSB"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="serif"
        android:text="@string/txt_sueldoBruto"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSN"
        android:layout_width="73dp"
        android:layout_height="23dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="224dp"
        android:fontFamily="serif"
        android:text="@string/txt_sueldoNeto"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:text="Sueldo bruto:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvSB"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="serif"
        android:text="Sueldo Neto:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvSN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:text="Pension:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvPE"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCV"
        android:layout_width="72dp"
        android:layout_height="25dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif"
        android:text="@string/txt_cargoView"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvDV"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="serif"
        android:text="Salud:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvSA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="serif"
        android:text="@string/txt_salud"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="520dp"
        android:fontFamily="serif"
        android:text="Valor del dia:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="serif"
        android:text="Descuento:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvDE"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVD"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="11dp"
        android:fontFamily="serif"
        android:text="@string/txt_valorxdia"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="serif"
        android:text="@string/txt_pension"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="serif"
        android:text="@string/txt_descuento"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSA"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="89dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="serif"
        android:text="Sueldo:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvSV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="serif"
        android:text="Datos de liquidacion"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSal"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="129dp"
        android:backgroundTint="#DD3F3F"
        android:fontFamily="serif"
        android:onClick="regresar"
        android:text="Salir"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="301dp"
        android:layout_height="65dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="31dp"
        android:fontFamily="serif"
        android:text="Liquidacion"
        android:textColor="#FF5722"
        android:textDirection="locale"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNV"
        android:layout_width="173dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:fontFamily="serif"
        android:text="@string/txt_nombresView"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAV"
        android:layout_width="173dp"
        android:layout_height="38dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="248dp"
        android:fontFamily="serif"
        android:text="@string/txt_apellidosView"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/albanil" />

</androidx.constraintlayout.widget.ConstraintLayout>